# aurelius

./: .gitignore  Cargo.toml  mise.toml
prd/: 01.md  02.1.md  02.md
src/: cli.rs  main.rs  persistence.rs
src/ingest/: extract_facts.rs  mod.rs  pipeline.rs  walker.rs
src/metabolic/: dream.rs  facts.rs  mod.rs  social_graph.rs
src/models/: download.rs  gemma.rs  mod.rs  qwen.rs  zembed.rs
src/query/: facts.rs  ls.rs  mod.rs  search.rs  teach.rs  today.rs
