[package]
name = "aurelius"
version = "0.1.0"
edition = "2024"

# [profile.release]
# lto = "thin"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
anyhow = "1.0.96"
clap = { version = "4.5.30", features = ["derive"] }
ignore = "0.4.23"
kreuzberg = { version = "4.8.4", features = ["pdf", "office"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"

swiftide = { version = "0.32.1", features = ["lancedb", "ollama", "openai"], path = "../swiftide/swiftide" }
swiftide-integrations = { version = "0.32.1", features = ["lancedb", "ollama", "openai"], path = "../swiftide/swiftide-integrations" }
# lance-graph = "0.5.4"
lance-index = "6.0.0-beta.1"
lancedb = "0.28.0-beta.7"
async-trait = "0.1.86"
futures = "0.3.31"
reqwest = { version = "0.12", features = ["json"] }
mime_guess = "2.0.5"
blake3 = "1.8.4"
arrow-array = "57.3.0"
arrow-schema = "57.3.0"
num_cpus = "1.17.0"
chrono = "0.4.44"
glob = "0.3.3"
uuid = { version = "1.15", features = ["v4", "v5"] }
tokio-stream = "0.1.18"
ascent = "0.7"
ratatui = "0.29"
crossterm = "0.29"
async-openai = { version = "0.35.0", features = ["_api"] }

[features]
default = ["keywords-rake", "tree-sitter"]
keywords-rake = ["kreuzberg/keywords-rake"]
keywords-yake = ["kreuzberg/keywords-yake"]
tree-sitter = ["kreuzberg/tree-sitter"]

[patch.crates-io]
lancedb = { git = "https://github.com/lancedb/lancedb", version = "0.28.0-beta.7" }
lance-index = { git = "https://github.com/lance-format/lance", tag = "v6.0.0-beta.1" }
lance-graph = {path = "../lance-graph/crates/lance-graph"}
